MagicianMap in MagicianMessage